# MuxsX

./: .gitignore  Colortable.py  Examples  MuxsX.py  README.md  deldict  muxsx.command  pyproject.toml
modex/: core.py  helps.py  osp.py
trash/: MuxsX.py  core.py
