[tool.poetry]
name = "muxsx"
version = "0.1.0"
description = "muxsx find string"
authors = ["JogFeelingVI <lifelse@outlook.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
